crates/plotnik-compiler/src/parser/tests/grammar/snapshots/plotnik_compiler__parser__tests__grammar__alternations_tests__tagged_alternation_with_quantifier.snap
---
source: crates/plotnik-compiler/src/parser/tests/grammar/alternations_tests.rs
---
Q = [
    Single: (statement)
    Multiple: (statement)+
]
---
Root
  Def
    Id "Q"
    Equals "="
    Alt
      BracketOpen "["
      Branch
        Id "Single"
        Colon ":"
        Tree
          ParenOpen "("
          Id "statement"
          ParenClose ")"
      Branch
        Id "Multiple"
        Colon ":"
        Quantifier
          Tree
            ParenOpen "("
            Id "statement"
            ParenClose ")"
          Plus "+"
      BracketClose "]"
