crates/plotnik-compiler/src/parser/tests/grammar/snapshots/plotnik_compiler__parser__tests__grammar__alternations_tests__unlabeled_alternation_three_items.snap
---
source: crates/plotnik-compiler/src/parser/tests/grammar/alternations_tests.rs
---
Q = [(identifier) (number) (string)]
---
Root
  Def
    Id "Q"
    Equals "="
    Alt
      BracketOpen "["
      Branch
        Tree
          ParenOpen "("
          Id "identifier"
          ParenClose ")"
      Branch
        Tree
          ParenOpen "("
          Id "number"
          ParenClose ")"
      Branch
        Tree
          ParenOpen "("
          Id "string"
          ParenClose ")"
      BracketClose "]"
